# outlook-oauth-mail-helper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  config.example.json  outlook_oauth_mail.py  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-check.yml
tests/: test_smoke.py
